<resources>
    <string name="app_name">SCC CIS Mobile Design Class Portal</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="time">Time</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="login">Login</string>
    <string name="ok">valid?</string>
    <string name="validate">validate</string>
    <string name="reset">reset</string>
    <string name="submit">Submit</string>
    <string name="correct_username_password">Good user and password.</string>
    <string name="incorrect_username_password">BAD user and password.</string>
    <string name="date">Date</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_message">Welcome to CISP 362</string>
    <string-array name="dates">
        <item>12/10/75</item>
        <item>01/03/99</item>
        <item>9/20/17</item>
        <item>11/23/18</item>
    </string-array>

    <string name="dateButtonLabel">Date...</string>
    <string name="timeButtonLabel">Time...</string>
    <string name="sendMailButtonLabel">Send eMail</string>
    <string name="viewMailButtonLabel">View eMail</string>

    <string name="EnglishLanguage">English</string>
    <string name="SpanishLanguage">Spanish</string>
    <string name="dateChosen">You selected:</string>
    <string name="membership">Sac City Member?</string>

    <string-array name="memberships">

        <item>Student</item>
        <item>Faculty</item>
        <item>Alumni</item>
        <item>Future student</item>
        <item>Guest</item>

    </string-array>

    <string name="picker">pick</string>


    <string name="category">Category:</string>
    <string name="game">Game</string>
    <string name="myGitHubLink">https://github.com/jyorkcar81</string>
    <string name="myGitHub">GitHub:</string>

    <string name="bio">Computer Information Science from UC Irvine.  Developing apps out of hobby.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="about_menu_item">About Me</string>
    <string name="link_menu_item">Link to App</string>
    <string name="link_home_menu_item">Link to Home</string>


    <string name="functionality_label">Functionality:</string>
    <string name="functionality_description">Memory game.  Match the same images on cards for all the cards shown.</string>


</resources>
